# clasification-for-CAPGEMINI

./: .gitignore  .pre-commit-config.yaml  README.md  clustering.html  clustering.ipynb  normas.txt  pyproject.toml  qué necesito.txt  requirements.txt
